# blconf

./: .gitignore  Makefile.am  NEWS  TODO  configure.ac.in
blconf/: Makefile.am  abicheck.sh  blconf-binding.c  blconf-binding.h  blconf-cache.c  blconf-cache.h  blconf-channel.c  blconf-channel.h  blconf-errors.h  blconf-private.h  blconf-types.h  blconf.c  blconf.h  blconf.symbols  libblconf-0.pc.in
blconf-perl/: Blconf.pm.in  Makefile.PL.in  Makefile.am  blconfperl.h  blconfperl.maps  xs_files
blconf-perl/xs/: Blconf.xs  BlconfBinding.xs  BlconfChannel.xs  Makefile.am
blconf-query/: Makefile.am  main.c
blconfd/: Makefile.am  blconf-backend-factory.c  blconf-backend-factory.h  blconf-backend-perchannel-xml.c  blconf-backend-perchannel-xml.h  blconf-backend.c  blconf-backend.h  blconf-daemon.c  blconf-daemon.h  blconf-locking-utils.c  blconf-locking-utils.h  main.c  org.blade.Blconf.service.in
common/: Makefile.am  blconf-common-private.h  blconf-dbus.xml  blconf-errors.c  blconf-gvaluefuncs.c  blconf-gvaluefuncs.h  blconf-types.c  make-blxo-alias.pl
docs/reference/: Makefile.am  blconf-docs.sgml  blconf-sections.txt  blconf.types
docs/reference/tmpl/: blconf-backend.sgml  blconf-binding.sgml  blconf-channel.sgml  blconf-errors.sgml  blconf-types.sgml  blconf-unused.sgml  blconf.sgml
docs/spec/: backend.txt  general.txt  lockdown-behavior.txt  perchannel-xml.txt
po/: POTFILES.in  POTFILES.skip  ar.po  ast.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+14 more)
tests/: Makefile.inc  tests-common.h
tests/get-properties/: t-get-arrayv.c  t-get-boolean.c  t-get-double.c  t-get-int.c  t-get-string.c  t-get-stringlist.c  t-get-uint64.c
tests/has-properties/: Makefile.am  t-has-arrayv.c  t-has-boolean.c  t-has-double.c  t-has-int.c  t-has-string.c  t-has-stringlist.c  t-has-uint64.c
tests/list-channels/: t-list-channels.c
tests/object-bindings/: t-object-bindings.c
tests/property-changed-signal/: t-string-changed-signal-detailed.c  t-string-changed-signal.c
tests/reset-properties/: t-reset-arrayv.c  t-reset-boolean.c  t-reset-double.c  t-reset-int.c  t-reset-string.c  t-reset-stringlist.c  t-reset-uint64.c
tests/set-properties/: t-set-arrayv.c  t-set-boolean.c  t-set-double.c  t-set-int.c  t-set-string.c  t-set-stringlist.c  t-set-uint64.c
